--- a/app/src/main/res/layout/activity_start_game.xml
+++ b/app/src/main/res/layout/activity_start_game.xml
@@ -25,14 +25,14 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/players_list"
-        android:layout_width="match_parent"
-        android:layout_height="300dp"
-        app:layout_constraintTop_toBottomOf="@id/player_on_game"
+        android:layout_width="375dp"
+        android:layout_height="276dp"
+        android:layout_marginStart="20dp"
         app:layout_constraintBottom_toTopOf="@id/fab_add_player_button"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        tools:ignore="MissingConstraints"
-      />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/player_on_game"
+        tools:ignore="MissingConstraints" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/fab_add_player_button"
