--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -1,17 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="#D6D6CE"
     tools:context=".HistoryFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="History Fragment"
-        android:id="@+id/history"
-        android:textSize="25dp"
-        />
 
-</FrameLayout>
+    <ImageView
+        android:id="@+id/bar_logo"
+        android:layout_width="match_parent"
+        android:layout_height="122dp"
+        android:layout_marginTop="56dp"
+        android:src="@drawable/baseline_bar_chart_gray"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="0dp" />
+
+    <TextView
+        android:id="@+id/history"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/history_fragment"
+        android:textAlignment="center"
+        android:textAllCaps="true"
+        android:textSize="35dp"
+        android:textStyle="bold"
+        android:fontFamily="@font/inter_regular"
+        app:layout_constraintTop_toBottomOf="@+id/bar_logo"
+        tools:ignore="MissingConstraints" />
+
+
+    <EditText
+        android:layout_width="350dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:text="@string/name_of_winner"
+        android:textAlignment="center"
+        app:layout_constraintTop_toBottomOf="@id/history"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:background="@drawable/name_of_winners"
+        android:padding="20dp"
+        tools:layout_editor_absoluteX="0dp" />
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
