--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,31 +8,33 @@
     tools:context=".HomeFragment">
 
     <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/appCompatImageView"
-        android:layout_width="300dp"
-        android:layout_height="300dp"
+        android:id="@+id/game_logo"
+        android:layout_width="350dp"
+        android:layout_height="350dp"
         android:src="@drawable/main_logo"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/start_button"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.508"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.167"
         tools:ignore="MissingConstraints" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/start_button"
-        android:layout_width="387dp"
-        android:layout_height="49dp"
+        android:layout_width="350dp"
+        android:layout_height="wrap_content"
         android:layout_margin="20dp"
-        android:layout_marginStart="16dp"
+        android:padding="20dp"
         android:text="@string/start_game_string"
         android:textSize="20dp"
-        android:padding="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.508"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
 
-        app:layout_constraintVertical_bias="0.598"
+        app:layout_constraintTop_toBottomOf="@+id/game_logo"
+        app:layout_constraintVertical_bias="0.048"
         tools:ignore="MissingConstraints" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
