--- a/app/src/main/res/layout/fragment_instruction.xml
+++ b/app/src/main/res/layout/fragment_instruction.xml
@@ -21,6 +21,7 @@
             android:layout_marginTop="40dp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
+            android:textColor="@color/black"
 
             />
 
@@ -32,6 +33,7 @@
             android:layout_marginTop="20dp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
+            android:textColor="@color/black"
             />
 
         <!--        Ladders-->
@@ -42,6 +44,7 @@
             android:layout_marginTop="20dp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
+            android:textColor="@color/black"
             />
 
 
@@ -53,18 +56,19 @@
             android:layout_marginTop="20dp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
+            android:textColor="@color/black"
             />
 
         <!--        Bounce back Variation-->
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-
-            android:text="@string/bounce_back_description"
-            />
+<!--        <TextView-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginTop="20dp"-->
+<!--            android:layout_marginLeft="20dp"-->
+<!--            android:layout_marginRight="20dp"-->
+<!--            android:textColor="@color/black"-->
+<!--            android:text="@string/bounce_back_description"-->
+<!--            />-->
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
