--- a/app/src/main/res/drawable/button_green.xml
+++ b/app/src/main/res/drawable/button_green.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient android:startColor="#66B660"
-        android:endColor="#00FF00"
+        android:endColor="#66B660"
         android:angle="270" />
 
     <corners android:radius="10dp" />
