--- a/app/src/main/res/layout/player_info.xml
+++ b/app/src/main/res/layout/player_info.xml
@@ -1,34 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@drawable/player_info_color"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardElevation="0dp">
 
-    <LinearLayout
+
+    <TextView
+        android:id="@+id/player_username"
         android:layout_width="match_parent"
-        android:layout_height="35dp"
-        android:orientation="vertical"
-        android:layout_margin="5dp"
+        android:layout_height="wrap_content"
+        android:background="@drawable/player_info_color"
+        android:text="@string/view_user_name"
+        android:textAlignment="center"
+        android:textSize="22sp"
+        android:padding="10dp"
+        android:layout_marginTop="1dp"
+        tools:ignore="MissingConstraints" />
 
-        >
-
-        <TextView
-            android:id="@+id/player_username"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="View User name"
-            android:textAlignment="center"
-            android:textSize="20dp"
-            android:layout_marginTop="1dp"
-
-            />
-
-    </LinearLayout>
-
-</androidx.cardview.widget.CardView>
+</LinearLayout>
 
 
 
